use table to show results

--- a/css/feedzy-rss-feed-import.css
+++ b/css/feedzy-rss-feed-import.css
@@ -61,33 +61,19 @@
 	color: #ff0000;
 }
 
-table.wp-list-table th.column-feedzy-status {
-	width: 100px;
-}
-
-table.wp-list-table td.column-feedzy-last_run .feedzy-api-error {
-	max-height: 120px;
-	overflow: hidden;
-}
-
-table.wp-list-table td.column-feedzy-last_run .feedzy-api-error.expand {
-	height: auto;
-	max-height: 1400px; /* arbitrary number */
-	overflow: visible;
-}
-
 tr.feedzy-import-status-row > td {
 	margin: 0;
 	padding: 0
 }
 
 tr.feedzy-import-status-row table {
-	width: 25%;
+	width: 32%;
+	table-layout: fixed;
 }
 
 tr.feedzy-import-status-row table tr td {
-	width: 18%;
-	background-color: #c0c0c0;
+	width: 25%;
+	background-color: #edecec;
 	text-align: center;
 }
 
@@ -97,7 +83,7 @@ tr.feedzy-import-status-row table tr:first-of-type td {
 }
 
 tr.feedzy-import-status-row table tr:last-of-type td {
-	background-color: #000000;
+	background-color: #5555559c;
 	color: #ffffff;
 	line-height: 3px;
 	text-transform: lowercase;
@@ -112,7 +98,7 @@ tr.feedzy-import-status-row table tr:last-of-type td {
 }
 
 .feedzy-error-status.import-success i {
-	color: #00ff00;
+	color: #149714;
 }
 
 a.feedzy-popup-details {
@@ -128,4 +114,17 @@ td.feedzy-has-popup {
 	text-decoration: underline;
 	cursor: pointer;
 	pointer-events: all;
+}
+
+.feedzy_run_now_msg {
+	font-size: 14px !important;
+	color: #ca4a1f !important;
+	background-color: inherit !important;
+}
+
+
+@media screen and (max-width: 782px) {
+	tr.feedzy-import-status-row table {
+		width: 100%;
+	}
 }
