--- a/includes/views/css/import-metabox-edit.css
+++ b/includes/views/css/import-metabox-edit.css
@@ -1668,15 +1668,24 @@ a:focus.dropdown-item {
 }
 
 .f1 {
-	padding: 25px;
+	padding: 30px;
+	padding-top: 10px;
 	border-radius: 4px;
 	background: #fff;
 }
 
 .f1 h3 {
 	margin-top: 0;
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 	text-transform: uppercase;
+	background-color: #f1f1f1;
+	padding: 5px;
+    border-radius: 5px;
+    text-indent: 1%;
+}
+
+.f1 h3:nth-of-type(n+2) {
+	margin-top: 30px;
 }
 
 .f1-steps {
@@ -1775,7 +1784,6 @@ a:focus.dropdown-item {
 }
 
 .f1 fieldset {
-	display: none;
 	text-align: left;
 }
 
