add dry run button
1. change verbiage
2. add feed validation button

--- a/includes/views/css/import-metabox-edit.css
+++ b/includes/views/css/import-metabox-edit.css
@@ -2134,7 +2134,7 @@ span.feedzy-spinner {
 }
 
 .feedzy-highlight {
-	background-color: #ccff00;
+	background-color: #f1f1f1;
 	padding: 1%;
 }
 
@@ -2177,4 +2177,34 @@ span.feedzy-spinner {
 .form-group small i {
 	font-size: 15px;
     line-height: 1.5;
+}
+
+#TB_ajaxContent ul {
+	list-style: decimal;
+	margin-left: 20px;
+}
+
+#TB_ajaxContent ul li {
+    padding: 5px !important;
+}
+
+
+#TB_ajaxContent p.loading-img {
+	text-align: center;
+}
+
+#TB_ajaxContent.loaded p.hide-when-loaded {
+	display: none;
+}
+
+#TB_ajaxContent div.dry_run span {
+	display: block;
+}
+
+#TB_ajaxContent div.dry_run span i.pass {
+	color: #149714;
+}
+
+#TB_ajaxContent div.dry_run span i.fail {
+	color: #ca4a1f;
 }
