--- a/includes/views/css/import-metabox-edit.css
+++ b/includes/views/css/import-metabox-edit.css
@@ -1797,6 +1797,7 @@ a:focus.dropdown-item {
 
 input[type="text"],
 input[type="password"],
+input[type="number"],
 textarea,
 textarea.form-control {
 	width: 100%;
@@ -1824,6 +1825,7 @@ textarea.form-control {
 
 input[type="text"]:focus,
 input[type="password"]:focus,
+input[type="number"]:focus,
 textarea:focus,
 textarea.form-control:focus {
 	border: 1px solid #ccc;
@@ -1834,6 +1836,7 @@ textarea.form-control:focus {
 
 input[type="text"]:-moz-placeholder,
 input[type="password"]:-moz-placeholder,
+input[type="number"]:-moz-placeholder,
 textarea:-moz-placeholder,
 textarea.form-control:-moz-placeholder {
 	color: #888;
@@ -1841,6 +1844,7 @@ textarea.form-control:-moz-placeholder {
 
 input[type="text"]:-ms-input-placeholder,
 input[type="password"]:-ms-input-placeholder,
+input[type="number"]:-ms-input-placeholder,
 textarea:-ms-input-placeholder,
 textarea.form-control:-ms-input-placeholder {
 	color: #888;
@@ -1848,6 +1852,7 @@ textarea.form-control:-ms-input-placeholder {
 
 input[type="text"]::-webkit-input-placeholder,
 input[type="password"]::-webkit-input-placeholder,
+input[type="number"]::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder,
 textarea.form-control::-webkit-input-placeholder {
 	color: #888;
