--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -67,7 +67,10 @@
 .feedzy-rss ul {
 	margin: 0 -2%;
 }
-
+.editor-styles-wrapper .feedzy-rss ul {
+	margin: 0 -2%;
+	box-sizing:  inherit;
+}
 .feedzy-rss ul:before,
 .feedzy-rss ul:after {
 	display: table;
