Add new global setting for deleting imported items Codeinwp/feedzy-rss-feeds-pro#234

--- a/css/metabox-settings.css
+++ b/css/metabox-settings.css
@@ -2023,3 +2023,7 @@ input.feedzy-toggle-round:checked + label:after {
 .fz-feature-features button.fz-btn.fz-btn-submit.fz-btn-activate.active:focus {
 	background-color: #62c370;
 }
+
+.fz-settings #feedzy_delete_days {
+	width: 50%;
+} 
