Add multiple field support in keyword filter Codeinwp/feedzy-rss-feeds-pro#323

--- a/includes/views/css/import-metabox-edit.css
+++ b/includes/views/css/import-metabox-edit.css
@@ -2232,3 +2232,6 @@ span.feedzy-spinner {
 	background: #fff;
 	box-shadow: 0 4px 5px rgb(0 0 0 / 15%);
 }
+#poststuff input[type="text"].feedzy-keyword-filter {
+	width: 98%;
+}
