--- a/includes/views/css/import-metabox-edit.css
+++ b/includes/views/css/import-metabox-edit.css
@@ -1798,6 +1798,7 @@ a:focus.dropdown-item {
 #poststuff input[type="text"],
 #poststuff input[type="password"],
 #poststuff input[type="number"],
+#poststuff input[type="datetime-local"],
 #poststuff textarea,
 #poststuff textarea.form-control {
 	width: 100%;
@@ -2234,4 +2235,18 @@ span.feedzy-spinner {
 }
 #poststuff input[type="text"].feedzy-keyword-filter {
 	width: 98%;
+}
+.form-group .feedzy_from_date {
+	width: 49%;
+	float: left;
+}
+.form-group .feedzy_to_date {
+	width: 49%;
+	float: right;
+}
+.form-group.item-date-filter {
+	padding-top: 0 !important;
+}
+.form-group.item-date-filter input {
+	padding: 0 10px !important;
 }
