--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -453,3 +453,7 @@ input:checked + .feedzy-track:before {
 .components-select-control {
 	height:auto;
 }
+.feedzy-rss-link-icon:after {
+	content: url( '../img/external-link.png' );
+	margin-left: 3px;
+}
