--- a/css/feedzy-rss-feed-import.css
+++ b/css/feedzy-rss-feed-import.css
@@ -8,54 +8,59 @@
  * Author: Themeisle
  */
 
-#feedzy_import_feeds h4 {
-	margin: 20px 0 10px;
-	font-size: 16px;
-}
-
-#feedzy_import_feeds .form-group label {
-	display: block;
-	margin: 0 0 5px;
-}
-
-#feedzy_import_feeds .form-group .chosen-single {
-	height: 44px;
-	padding: 0 20px;
-	border: 1px solid #ddd;
-	border-radius: 4px;
-	color: #888;
-	background: #fff;
+ #feedzy_import_feeds{
+	background: transparent;
+	border: 0;
 	box-shadow: none;
-	font-family: "Roboto", sans-serif;
-	font-size: 16px;
-	font-weight: 300;
-	line-height: 44px;
+	max-width: 1224px;
+	margin: 0 auto;
+	padding-left: 12px;
+	padding-right: 12px;
+	box-sizing: border-box;
 }
-
-#feedzy_import_feeds .chosen-container-single .chosen-single div {
-	top: 10px;
-	right: -2px;
+#feedzy_import_feeds > .postbox-header{
+	display: none;
 }
-
-#feedzy_import_feeds #feedzy_post_type_chosen,
-#feedzy_import_feeds #feedzy_post_terms_chosen {
-	margin-bottom: 20px;
+.post-type-feedzy_imports:not(.edit-php) .page-title-action, .post-type-feedzy_imports:not(.edit-php) .wp-heading-inline {
+	display: none !important;
 }
-
-#feedzy_import_feeds .chosen-container-single .chosen-drop {
-	border-color: #ddd;
-	z-index: 99999999;
+.post-type-feedzy_imports:not(.edit-php) #wpcontent{
+	padding-left: 0;
 }
-
-#feedzy_import_feeds .chosen-container-single .chosen-search input[type="text"] {
-	border-color: #ddd;
+.post-type-feedzy_imports:not(.edit-php) #post-body-content{
+	display: none;
 }
-
-#feedzy_import_feeds .chosen-container .chosen-results li.highlighted {
-	background-color: #099bb2;
-	background-image: none;
+.post-type-feedzy_imports:not(.edit-php) .wrap{
+	margin-top: 0;
+	margin-right: 0;
 }
-
+.post-type-feedzy_imports:not(.edit-php) .wrap > .wp-heading-inline,
+.post-type-feedzy_imports:not(.edit-php) .wrap > .wp-header-end{
+	display: none;
+}
+.post-type-feedzy_imports:not(.edit-php) #poststuff{
+	padding-top: 0;
+}
+.post-type-feedzy_imports:not(.edit-php) #poststuff .inside{
+	margin-top: 0;
+	padding-left: 0;
+	padding-right: 0;
+}
+.post-type-feedzy_imports:not(.edit-php) #poststuff #post-body.columns-2{
+	margin-right: 0;
+}
+.post-type-feedzy_imports:not(.edit-php) #post-body.columns-2 #postbox-container-1{
+	width: 100%;
+	float: none;
+}
+.feedzy_page_feedzy-settings #wpcontent,
+.feedzy_page_feedzy-support #wpcontent{
+	padding-left: 0;
+}
+.feedzy_page_feedzy-settings .feedzy-header,
+.feedzy_page_feedzy-support .feedzy-header{
+	margin-bottom: 40px;
+}
 .feedzy-api-error,
 .feedzy-error-critical {
 	color: #ff0000;
@@ -125,7 +130,6 @@ td.feedzy-has-popup {
 	color: #ca4a1f !important;
 	background-color: inherit !important;
 }
-
 
 @media screen and (max-width: 782px) {
 	tr.feedzy-import-status-row table {
