Remove default post publish metabox Codeinwp/feedzy-rss-feeds-pro#430

--- a/css/settings.css
+++ b/css/settings.css
@@ -103,7 +103,7 @@
 	vertical-align: middle;
 }
 
-.feedzy-wrap + .wrap div#side-sortables{
+.post-type-feedzy_imports:not(.edit-post) .wrap div#side-sortables{
 	display: none;
 }
 .feedzy-container{
